--- a/vsem_calibration_tests/vsem_calibration_basic_tests.Rmd
+++ b/vsem_calibration_tests/vsem_calibration_basic_tests.Rmd
@@ -30,6 +30,8 @@ knitr::opts_chunk$set(echo = TRUE)
 library(data.table)
 library(BayesianTools)
 
+source("mcmc_calibration_functions.r")
+
 set.seed(5)
 ```
 
@@ -59,6 +61,7 @@ N_outputs <- length(output_vars)
 
 
 # Model Parameters and Synthetic Data Generation
+
 ```{r data_gen, include = FALSE}
 # Create time series of Phosynthetically Active Radiation (PAR) which is the forcing variable
 # for the VSEM model. 
@@ -81,6 +84,20 @@ data_obs <- data_ref + Z %*% Lt
 pars_cal_sel <- which(rownames(ref_pars) %in% pars_cal)
 ```
 
+
+## True Parameters
+
+### Calibration Parameters ($\theta$)
+```{r true_params, echo = FALSE}
+print(ref_pars)
+```
+
+### Likelihood Parameters ($\Sigma_\epsilon$)
+```{r true_lik_params, echo = FALSE}
+print(Sig_eps)
+```
+
+## Synthetic data plots
 ```{r PAR_plot, echo = FALSE}
 # Plot PAR, the forcing term in the model
 plot(PAR, main = "PAR (driving the model)", xlab = "Day", ylab = "PAR")
@@ -126,7 +143,16 @@ legend(x = "bottomright",
        col = c("red", "blue")) 
 ```
 
+### Likelihood Plot
+```{r, echo = FALSE}
+k_ext_vals <- seq(ref_pars["KEXT", "lower"], ref_pars["KEXT", "upper"], length.out = 100)
+llik_vals <- vector(mode = "numeric", length = length(k_ext_vals))
+for(i in seq_along(llik_vals)) {
+  llik_vals[i] <- llik_Gaussian(k_ext_vals[i], Sig_eps, ref_pars, pars_cal_sel, output_vars, PAR, data_obs)
+}
 
+plot(k_ext_vals, llik_vals, type = "l", xlab = "KEXT", ylab = "Unnormalized Log-Likelihood", "Log-Likelihood 1D Projection")
+```
 
 
 
