--- a/vsem_calibration_tests/vsem_calibration_basic_tests.Rmd
+++ b/vsem_calibration_tests/vsem_calibration_basic_tests.Rmd
@@ -42,10 +42,15 @@ N_days <- 1000
 
 # The covariance matrix between the outputs. Note that the NEE output of the
 # model VSEM() is scalesd by 1000, so the observation error magnitude should correspond 
-# to this scale. 
-Sig_eps <- diag(c(4.0, 4.0, 4.0, 4.0))
+# to this scale. In this basic example, we assume equal noise variance for each output.
+noise_var <- 4.0
+Sig_eps <- noise_var * diag(1, nrow = 4)
 rownames(Sig_eps) <- c("NEE", "Cv", "Cs", "CR")
 colnames(Sig_eps) <- c("NEE", "Cv", "Cs", "CR")
+
+# Assuming iid Inverse Gamma priors on each sig_eps_j
+sig_eps_prior_mean <- noise_var
+sig_eps_prior_sd <- 0.4
 
 # Names of parameters to calibrate.
 pars_cal <- c("KEXT")
@@ -82,6 +87,7 @@ data_obs <- data_ref + Z %*% Lt
 
 # Index selector for calibration parameters
 pars_cal_sel <- which(rownames(ref_pars) %in% pars_cal)
+ref_pars[["calibrate"]] <- rownames(ref_pars) %in% pars_cal
 ```
 
 
@@ -154,6 +160,31 @@ for(i in seq_along(llik_vals)) {
 plot(k_ext_vals, llik_vals, type = "l", xlab = "KEXT", ylab = "Unnormalized Log-Likelihood", main = "Log-Likelihood 1D Projection")
 abline(v = ref_pars["KEXT", "best"], col = "red")
 ```
+
+# Priors
+
+## Calibration Parameters
+```{r, echo = FALSE}
+ref_pars["KEXT", "dist"] <- "Uniform"
+ref_pars["KEXT", "param1"] <- 0.2
+ref_pars["KEXT", "param2"] <- 0.7
+print(ref_pars[pars_cal_sel, c("dist", "param1", "param2")])
+```
+## Observation Covariance Matrix
+
+```{r, echo = FALSE}
+# Define inverse Gamma hyperparameters, in order to achieve mean and sd specified above
+inv_gamma_a <- 2 + (sig_eps_prior_mean / sig_eps_prior_sd)^2
+inv_gamma_b <- sig_eps_prior_mean + sig_eps_prior_mean^3 / sig_eps_prior_sd^2
+```
+
+Recall that the true noise variances $\sigma^2_{\epsilon_j}$ $j = 1, \dots, 4$ were all set to the value `r noise_var`. In this example, I define iid priors
+$$\sigma^2_{\epsilon_j} \overset{iid}{\sim} IG(a, b)$$
+where a = `r inv_gamma_a` and b = `r inv_gamma_b` which center the priors on the true values, with standard deviations `r sig_eps_prior_sd`. 
+
+
+
+
 
 
 
